Se realizo funcionalidades de venta , productos2025