@@ -1,25 +1,21 @@
 package com.gymplus.backend.service.impl;
 
-import com.gymplus.backend.dto.membresia.MembresiaRequestDto;
-import com.gymplus.backend.dto.membresia.MembresiaResponseDto;
-import com.gymplus.backend.entity.Gimnasio;
-import com.gymplus.backend.entity.Membresia;
-import com.gymplus.backend.entity.Sucursal;
-import com.gymplus.backend.entity.TipoMembresia;
-import com.gymplus.backend.entity.Usuario;
-import com.gymplus.backend.repository.GimnasioRepository;
-import com.gymplus.backend.repository.MembresiaRepository;
-import com.gymplus.backend.repository.SucursalRepository;
-import com.gymplus.backend.repository.TipoMembresiaRepository;
-import com.gymplus.backend.repository.UsuarioRepository;
+import com.gymplus.backend.dto.*;
+import com.gymplus.backend.entity.*;
+import com.gymplus.backend.exception.ResourceNotFoundException;
+import com.gymplus.backend.repository.*;
 import com.gymplus.backend.service.MembresiaService;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,91 +25,104 @@ public class MembresiaServiceImpl implements MembresiaService {
     private final MembresiaRepository membresiaRepository;
     private final UsuarioRepository usuarioRepository;
     private final TipoMembresiaRepository tipoMembresiaRepository;
-    private final GimnasioRepository gimnasioRepository;
-    private final SucursalRepository sucursalRepository;
-    private final ModelMapper modelMapper;
+    private final TipoPagoRepository tipoPagoRepository;
+    private final PagoRepository pagoRepository;
 
     @Override
     @Transactional(readOnly = true)
-    public List<MembresiaResponseDto> listar() {
-        return membresiaRepository.findAll().stream()
-                .map(this::toDto)
-                .toList();
+    public List<MembresiaDto> listar() {
+        Sucursal sucursal = getCurrentUserSucursal();
+        List<Membresia> membresias = membresiaRepository.findBySucursalIdOrderByFechaInicioDesc(sucursal.getId());
+        return membresias.stream().map(this::toDto).collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public MembresiaResponseDto obtenerPorId(Long id) {
-        return toDto(obtenerEntidad(id));
-    }
-
-    @Override
-    public MembresiaResponseDto crear(MembresiaRequestDto dto) {
-        Membresia membresia = new Membresia();
-        mapearEntidad(dto, membresia);
-        membresiaRepository.save(membresia);
+    public MembresiaDto obtenerPorId(Long id) {
+        Membresia membresia = membresiaRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Membresía no encontrada"));
         return toDto(membresia);
     }
 
     @Override
-    public MembresiaResponseDto actualizar(Long id, MembresiaRequestDto dto) {
-        Membresia membresia = obtenerEntidad(id);
-        mapearEntidad(dto, membresia);
-        return toDto(membresia);
-    }
+    public MembresiaDto crearMembresia(CrearMembresiaRequest request) {
+        Sucursal sucursal = getCurrentUserSucursal();
+        Gimnasio gimnasio = sucursal.getGimnasio();
 
-    @Override
-    public void eliminar(Long id) {
-        Membresia membresia = obtenerEntidad(id);
-        membresiaRepository.delete(membresia);
-    }
+        // Get client
+        Usuario cliente = usuarioRepository.findById(request.getClienteId())
+                .orElseThrow(() -> new EntityNotFoundException("Cliente no encontrado"));
 
-    private void mapearEntidad(MembresiaRequestDto dto, Membresia membresia) {
-        Usuario usuario = obtenerUsuario(dto.getIdUsuario());
-        TipoMembresia tipoMembresia = obtenerTipo(dto.getIdTipoMembresia());
-        Gimnasio gimnasio = obtenerGimnasio(dto.getIdGimnasio());
-        Sucursal sucursal = dto.getIdSucursal() != null ? obtenerSucursal(dto.getIdSucursal()) : null;
-        membresia.setUsuario(usuario);
-        membresia.setTipoMembresia(tipoMembresia);
-        membresia.setGimnasio(gimnasio);
-        membresia.setSucursal(sucursal);
-        membresia.setFechaInicio(dto.getFechaInicio());
-        membresia.setFechaFin(dto.getFechaFin());
-        membresia.setEstado(dto.getEstado());
-        membresia.setAutoRenovacion(dto.getAutoRenovacion());
-    }
-
-    private Membresia obtenerEntidad(Long id) {
-        return membresiaRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Membresía no encontrada"));
-    }
-
-    private Usuario obtenerUsuario(Long id) {
-        return usuarioRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado"));
-    }
-
-    private TipoMembresia obtenerTipo(Long id) {
-        return tipoMembresiaRepository.findById(id)
+        // Get membership type
+        TipoMembresia tipoMembresia = tipoMembresiaRepository.findById(request.getTipoMembresiaId())
                 .orElseThrow(() -> new EntityNotFoundException("Tipo de membresía no encontrado"));
+
+        // Get payment type
+        TipoPago tipoPago = tipoPagoRepository.findById(request.getTipoPagoId())
+                .orElseThrow(() -> new EntityNotFoundException("Tipo de pago no encontrado"));
+
+        // Calculate dates
+        LocalDate fechaInicio = request.getFechaInicio() != null ? request.getFechaInicio() : LocalDate.now();
+        LocalDate fechaFin = fechaInicio.plusDays(tipoMembresia.getDuracionDias());
+
+        // Create Membresia
+        Membresia membresia = Membresia.builder()
+                .usuario(cliente)
+                .tipoMembresia(tipoMembresia)
+                .gimnasio(gimnasio)
+                .sucursal(sucursal)
+                .fechaInicio(fechaInicio)
+                .fechaFin(fechaFin)
+                .estado("ACTIVA")
+                .autoRenovacion(false)
+                .build();
+
+        membresia = membresiaRepository.save(membresia);
+
+        // Create Pago
+        Pago pago = Pago.builder()
+                .membresia(membresia)
+                .tipoPago(tipoPago)
+                .gimnasio(gimnasio)
+                .sucursal(sucursal)
+                .monto(tipoMembresia.getPrecioBase())
+                .fechaPago(LocalDateTime.now())
+                .referencia(request.getReferencia())
+                .estado("COMPLETADO")
+                .build();
+
+        pagoRepository.save(pago);
+
+        return toDto(membresia);
     }
 
-    private Gimnasio obtenerGimnasio(Long id) {
-        return gimnasioRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Gimnasio no encontrado"));
+    private Sucursal getCurrentUserSucursal() {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        String username = auth.getName();
+
+        Usuario usuario = usuarioRepository.findByUsernameWithSucursal(username)
+                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado"));
+
+        Sucursal sucursal = usuario.getSucursalPorDefecto();
+        if (sucursal == null) {
+            throw new RuntimeException("El usuario no tiene una sucursal asignada");
+        }
+        return sucursal;
     }
 
-    private Sucursal obtenerSucursal(Long id) {
-        return sucursalRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Sucursal no encontrada"));
-    }
-
-    private MembresiaResponseDto toDto(Membresia membresia) {
-        MembresiaResponseDto dto = modelMapper.map(membresia, MembresiaResponseDto.class);
-        dto.setIdUsuario(membresia.getUsuario().getId());
-        dto.setIdTipoMembresia(membresia.getTipoMembresia().getId());
-        dto.setIdGimnasio(membresia.getGimnasio().getId());
-        dto.setIdSucursal(membresia.getSucursal() != null ? membresia.getSucursal().getId() : null);
-        return dto;
+    private MembresiaDto toDto(Membresia m) {
+        return MembresiaDto.builder()
+                .id(m.getId())
+                .clienteId(m.getUsuario().getId())
+                .clienteNombre(m.getUsuario().getNombre() + " " + m.getUsuario().getApellido())
+                .clienteEmail(m.getUsuario().getEmail())
+                .tipoMembresiaId(m.getTipoMembresia().getId())
+                .tipoMembresiaNombre(m.getTipoMembresia().getNombre())
+                .precio(m.getTipoMembresia().getPrecioBase())
+                .fechaInicio(m.getFechaInicio())
+                .fechaFin(m.getFechaFin())
+                .estado(m.getEstado())
+                .autoRenovacion(m.getAutoRenovacion())
+                .build();
     }
 }
