@@ -1,31 +1,22 @@
 package com.gymplus.backend.service.impl;
 
-import com.gymplus.backend.dto.venta.VentaDetalleRequestDto;
-import com.gymplus.backend.dto.venta.VentaDetalleResponseDto;
-import com.gymplus.backend.dto.venta.VentaRequestDto;
-import com.gymplus.backend.dto.venta.VentaResponseDto;
-import com.gymplus.backend.entity.Gimnasio;
-import com.gymplus.backend.entity.Producto;
-import com.gymplus.backend.entity.Sucursal;
-import com.gymplus.backend.entity.Usuario;
-import com.gymplus.backend.entity.Venta;
-import com.gymplus.backend.entity.VentaDetalle;
-import com.gymplus.backend.repository.GimnasioRepository;
-import com.gymplus.backend.repository.ProductoRepository;
-import com.gymplus.backend.repository.SucursalRepository;
-import com.gymplus.backend.repository.UsuarioRepository;
-import com.gymplus.backend.repository.VentaRepository;
+import com.gymplus.backend.dto.*;
+import com.gymplus.backend.entity.*;
+import com.gymplus.backend.exception.ResourceNotFoundException;
+import com.gymplus.backend.repository.*;
 import com.gymplus.backend.service.VentaService;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,123 +24,150 @@ import java.util.List;
 public class VentaServiceImpl implements VentaService {
 
     private final VentaRepository ventaRepository;
-    private final GimnasioRepository gimnasioRepository;
-    private final SucursalRepository sucursalRepository;
-    private final UsuarioRepository usuarioRepository;
     private final ProductoRepository productoRepository;
-    private final ModelMapper modelMapper;
+    private final UsuarioRepository usuarioRepository;
+    private final TipoPagoRepository tipoPagoRepository;
+    private final PagoRepository pagoRepository;
 
     @Override
     @Transactional(readOnly = true)
-    public List<VentaResponseDto> listar() {
-        return ventaRepository.findAll().stream()
-                .map(this::toDto)
-                .toList();
+    public List<VentaDto> listar() {
+        Sucursal sucursal = getCurrentUserSucursal();
+        List<Venta> ventas = ventaRepository.findBySucursalIdOrderByFechaVentaDesc(sucursal.getId());
+        return ventas.stream().map(this::toDto).collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public VentaResponseDto obtenerPorId(Long id) {
-        return toDto(obtenerEntidad(id));
+    public VentaDto obtenerPorId(Long id) {
+        Venta venta = ventaRepository.findByIdWithDetalles(id);
+        if (venta == null) {
+            throw new ResourceNotFoundException("Venta no encontrada");
+        }
+        return toDtoWithDetalles(venta);
     }
 
     @Override
-    public VentaResponseDto crear(VentaRequestDto dto) {
-        Venta venta = new Venta();
-        mapearVenta(dto, venta);
-        ventaRepository.save(venta);
-        return toDto(venta);
-    }
+    public VentaDto crearVenta(CrearVentaRequest request) {
+        Sucursal sucursal = getCurrentUserSucursal();
+        Gimnasio gimnasio = sucursal.getGimnasio();
 
-    @Override
-    public VentaResponseDto actualizar(Long id, VentaRequestDto dto) {
-        Venta venta = obtenerEntidad(id);
-        mapearVenta(dto, venta);
-        return toDto(venta);
-    }
+        // Get client
+        Usuario cliente = usuarioRepository.findById(request.getClienteId())
+                .orElseThrow(() -> new EntityNotFoundException("Cliente no encontrado"));
 
-    @Override
-    public void eliminar(Long id) {
-        Venta venta = obtenerEntidad(id);
-        ventaRepository.delete(venta);
-    }
+        // Get payment type
+        TipoPago tipoPago = tipoPagoRepository.findById(request.getTipoPagoId())
+                .orElseThrow(() -> new EntityNotFoundException("Tipo de pago no encontrado"));
 
-    private void mapearVenta(VentaRequestDto dto, Venta venta) {
-        Gimnasio gimnasio = obtenerGimnasio(dto.getIdGimnasio());
-        Usuario usuario = obtenerUsuario(dto.getIdUsuario());
-        Sucursal sucursal = dto.getIdSucursal() != null ? obtenerSucursal(dto.getIdSucursal()) : null;
-        venta.setGimnasio(gimnasio);
-        venta.setUsuario(usuario);
-        venta.setSucursal(sucursal);
-        venta.setEstado(dto.getEstado());
+        // Validate stock and calculate total
+        List<Producto> productos = new ArrayList<>();
+        List<Integer> cantidades = new ArrayList<>();
+        BigDecimal total = BigDecimal.ZERO;
 
-        if (venta.getDetalles() == null) {
-            venta.setDetalles(new HashSet<>());
-        } else {
-            venta.getDetalles().clear();
+        for (ItemVentaDto item : request.getItems()) {
+            Producto producto = productoRepository.findById(item.getProductoId())
+                    .orElseThrow(
+                            () -> new EntityNotFoundException("Producto " + item.getProductoId() + " no encontrado"));
+
+            // Check stock
+            if (producto.getStockActual() < item.getCantidad()) {
+                throw new IllegalArgumentException(
+                        "Stock insuficiente para " + producto.getNombre() +
+                                ". Disponible: " + producto.getStockActual() + ", Solicitado: " + item.getCantidad());
+            }
+
+            productos.add(producto);
+            cantidades.add(item.getCantidad());
+            total = total.add(producto.getPrecioUnitario().multiply(BigDecimal.valueOf(item.getCantidad())));
         }
 
-        List<VentaDetalle> detalles = new ArrayList<>();
-        dto.getDetalles().forEach(detDto -> detalles.add(crearDetalle(detDto, venta)));
-        venta.getDetalles().addAll(detalles);
+        // Create Venta
+        Venta venta = Venta.builder()
+                .gimnasio(gimnasio)
+                .sucursal(sucursal)
+                .usuario(cliente)
+                .fechaVenta(LocalDateTime.now())
+                .total(total)
+                .estado("COMPLETADA")
+                .build();
 
-        BigDecimal total = detalles.stream()
-                .map(VentaDetalle::getSubtotal)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-        venta.setTotal(total);
+        venta = ventaRepository.save(venta);
+
+        // Create VentaDetalles and update stock
+        for (int i = 0; i < productos.size(); i++) {
+            Producto producto = productos.get(i);
+            Integer cantidad = cantidades.get(i);
+
+            VentaDetalle detalle = VentaDetalle.builder()
+                    .venta(venta)
+                    .producto(producto)
+                    .cantidad(cantidad)
+                    .precioUnitario(producto.getPrecioUnitario())
+                    .subtotal(producto.getPrecioUnitario().multiply(BigDecimal.valueOf(cantidad)))
+                    .build();
+
+            venta.getDetalles().add(detalle);
+
+            // Decrement stock
+            producto.setStockActual(producto.getStockActual() - cantidad);
+            productoRepository.save(producto);
+        }
+
+        // Create Pago
+        Pago pago = Pago.builder()
+                .venta(venta)
+                .tipoPago(tipoPago)
+                .gimnasio(gimnasio)
+                .sucursal(sucursal)
+                .monto(total)
+                .fechaPago(LocalDateTime.now())
+                .referencia(request.getReferencia())
+                .estado("COMPLETADO")
+                .build();
+
+        pagoRepository.save(pago);
+
+        return toDtoWithDetalles(venta);
     }
 
-    private VentaDetalle crearDetalle(VentaDetalleRequestDto detDto, Venta venta) {
-        Producto producto = obtenerProducto(detDto.getIdProducto());
-        return VentaDetalle.builder()
-                .venta(venta)
-                .producto(producto)
-                .cantidad(detDto.getCantidad())
-                .precioUnitario(detDto.getPrecioUnitario())
-                .subtotal(detDto.getPrecioUnitario().multiply(BigDecimal.valueOf(detDto.getCantidad())))
+    private Sucursal getCurrentUserSucursal() {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        String username = auth.getName();
+
+        Usuario usuario = usuarioRepository.findByUsernameWithSucursal(username)
+                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado"));
+
+        Sucursal sucursal = usuario.getSucursalPorDefecto();
+        if (sucursal == null) {
+            throw new RuntimeException("El usuario no tiene una sucursal asignada");
+        }
+        return sucursal;
+    }
+
+    private VentaDto toDto(Venta venta) {
+        return VentaDto.builder()
+                .id(venta.getId())
+                .clienteId(venta.getUsuario().getId())
+                .clienteNombre(venta.getUsuario().getNombre() + " " + venta.getUsuario().getApellido())
+                .fechaVenta(venta.getFechaVenta())
+                .total(venta.getTotal())
+                .estado(venta.getEstado())
                 .build();
     }
 
-    private Venta obtenerEntidad(Long id) {
-        return ventaRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Venta no encontrada"));
-    }
-
-    private Gimnasio obtenerGimnasio(Long id) {
-        return gimnasioRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Gimnasio no encontrado"));
-    }
-
-    private Usuario obtenerUsuario(Long id) {
-        return usuarioRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado"));
-    }
-
-    private Sucursal obtenerSucursal(Long id) {
-        return sucursalRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Sucursal no encontrada"));
-    }
-
-    private Producto obtenerProducto(Long id) {
-        return productoRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Producto no encontrado"));
-    }
-
-    private VentaResponseDto toDto(Venta venta) {
-        VentaResponseDto dto = modelMapper.map(venta, VentaResponseDto.class);
-        dto.setIdGimnasio(venta.getGimnasio().getId());
-        dto.setIdUsuario(venta.getUsuario().getId());
-        dto.setIdSucursal(venta.getSucursal() != null ? venta.getSucursal().getId() : null);
-        List<VentaDetalleResponseDto> detalles = venta.getDetalles().stream()
-                .map(this::toDetalleDto)
-                .toList();
+    private VentaDto toDtoWithDetalles(Venta venta) {
+        VentaDto dto = toDto(venta);
+        List<VentaDetalleDto> detalles = venta.getDetalles().stream()
+                .map(d -> VentaDetalleDto.builder()
+                        .productoId(d.getProducto().getId())
+                        .productoNombre(d.getProducto().getNombre())
+                        .cantidad(d.getCantidad())
+                        .precioUnitario(d.getPrecioUnitario())
+                        .subtotal(d.getSubtotal())
+                        .build())
+                .collect(Collectors.toList());
         dto.setDetalles(detalles);
-        return dto;
-    }
-
-    private VentaDetalleResponseDto toDetalleDto(VentaDetalle detalle) {
-        VentaDetalleResponseDto dto = modelMapper.map(detalle, VentaDetalleResponseDto.class);
-        dto.setIdProducto(detalle.getProducto().getId());
         return dto;
     }
 }
